# verifier

./: Cargo.toml  Dockerfile  README.md  build.rs  receipt_output.json
k8s/: verifier-service.yaml
src/: main.rs
src/generated_grpc/: receipt_verifier.rs
