[package]
name = "risc0-verify-receipt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.3.6", features = ["full"] }
hyper = { version = "0.14", features = ["server"] }
risc0-zkvm = { version = "^2.0.2" }
bincode = "1.3"
anyhow = "1.0"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.4", features = ["limit"] }
